memodump/css/memodump.css
/*
 * CSS for memodump theme for MoinMoin 1.9.x
 * Copyright 2014 dossist.
 * Based on Twitter Bootstrap 3.1.1.
 * Load after bootstrap css.
 */

/*=========================================================
   outbox
===========================================================*/

html, body {
	/* need this to use relative sizes in children */
	/* don't worry about contents longer than one screen height; they are just rendered properly */
    height: 100%;
    padding: 0;
    margin: 0;
}
#outbox {
	position: relative; /* child elements are relative to this */
    min-height: 100%;
	height: auto !important;
	width: 100%;
    padding-top: 51px; /* navbar height. 50px + 1px border */
    padding-bottom: 60px; /* footer height */
}
/* sticky footer; sticks to the bottom of the screen as long as contents are less than 1 screen long */
#footer {
    position: absolute;
    bottom: 0;
    height: 60px; /* height of the footer */
    width: 100%;
}
/* the footer will overflow in narrow screens. this extends the footer without masking contents */
#footer > .container-fluid {
    background-color: #f5f5f5;
    padding: 20px 15px;
}
#pageinfo-container {
    position: absolute;
    bottom: 60px;
    width: 100%;
}
#outbox {
    padding-bottom: 110px; /* footer height + pageinfo height */
}

/*=========================================================
   navbar elements
===========================================================*/

/* search form customization: search icon inside input area */
input.form-search {
    padding-right: 24px;
    padding-left: 8px;
}
form.form-search {
	position: relative;
}
form.form-search:before {
    display: block;
    width: 14px;
    height: 14px;
    font-size: small;
    content: "\e003";
    font-family: 'Glyphicons Halflings';
    position: absolute;
    top: 9px;
    right: 8px;
    opacity: .5;
}
.navbar-form { /* Bootstrap bug? counter glitchy margins when uncollapsed in xs view */
    margin-left: 0;
    margin-right: 0;
}
@media screen and (min-width: 768px) { /* sm or above */
    /* truncate too long elements */
    .nav-maxwidth-100 {
        display: table-cell;
        max-width: 100px;
        overflow-x: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
    }
    /* prevent navbar element from overflowing */
    .navbar .container {
        position: relative;
    }
    .navbar .navbar-collapse {
        position: absolute;
        right: 15px;
    }
}

/*=========================================================
   sidebar elements
===========================================================*/

/* taken from bootstrap to fit into wiki output (to enable styles without classes) */
#sidebar ul, #sidebar ol {
    padding-left: 0;
    margin-bottom: 0;
    list-style: none;
    line-height: 1;
    word-wrap: break-word;
}
#sidebar li { /* .nav > li */
    position: relative;
    display: block;
}
#sidebar li a { /* .nav > li > a */
    position: relative;
    display: block;
    padding: 10px 15px;
}
#sidebar li a:hover,
#sidebar li a:focus { /* .nav > li > a:* */
    text-decoration: none;
    background-color: #eee;
}
#sidebar li a img { /* .nav > li > a > img */
    max-width: none;
}

/* list style */
#sidebar ul, #sidebar ol {
	background-color: #f7f7f7;
    border-radius: 3px; /* box cornering */
}
/* workaround for cornering when hovered */
#sidebar div > ul > li:first-child,
#sidebar div > ol > li:first-child {
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
}
#sidebar div > ul > li:last-child,
#sidebar div > ol > li:last-child {
    border-bottom-left-radius: inherit;
    border-bottom-right-radius: inherit;
}
#sidebar div > ul > li:first-child > a:hover,
#sidebar div > ul > li:first-child > a:focus,
#sidebar div > ol > li:first-child > a:hover,
#sidebar div > ol > li:first-child > a:focus {
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
}
#sidebar div > ul > li:last-child > a:hover,
#sidebar div > ul > li:last-child > a:focus,
#sidebar div > ol > li:last-child > a:hover,
#sidebar div > ol > li:last-child > a:focus {
    border-bottom-left-radius: inherit;
    border-bottom-right-radius: inherit;
}

/* list padding */
#sidebar ul, #sidebar ol {
	padding: 0px 10px; /* whole list gets paddings on the left and the right */
}
#sidebar li {
    padding: 7px 0px; /* every list item gets paddings on top and bottom */
}
/* padding workaround needed for highlighting behavior when hovered */
#sidebar li a {
    margin: -7px -10px; /* neutralize ul and li paddings */
	padding: 7px 10px; /* and add same amount of paddings manually, which allows colorizing the hole background */
}
/* padding in nested list */
#sidebar ul ul, #sidebar ul ol, #sidebar ol ul, #sidebar ol ol {
    padding: 0;
	padding-top: 7px;
    padding-left: 10px; /* we want to give some additional indent */
	margin: -7px 0px; /* neutralize top/bottom paddings as we have some in our own <li> */
}
/* padding of a in nested list */
#sidebar li li a {
    margin-left: -20px; /* we only need to change what has changed, i.e. padding on the left */
    padding-left: 20px;
}
#sidebar li li li a {
    margin-left: -30px;
    padding-left: 30px;
}
#sidebar li li li li a {
    margin-left: -40px;
    padding-left: 40px;
}
#sidebar li li li li li a { /* enough, isn't it? */
    margin-left: -50px;
    padding-left: 50px;
}
/* workaround for overflow */
#sidebar div > ul,
#sidebar div > ol {
    overflow-x: hidden;
}

/* head indenting */
#sidebar div > h1, #sidebar div > h2, #sidebar div > h3,
#sidebar div > h4, #sidebar div > h5, #sidebar div > h6 {
	padding: 0 15px;
}
#sidebar div > h1[class], #sidebar div > h2[class], #sidebar div > h3[class],
#sidebar div > h4[class], #sidebar div > h5[class], #sidebar div > h6[class] {
	padding: 0;
}
#sidebar h1, #sidebar h2, #sidebar h3,
#sidebar h4, #sidebar h5, #sidebar h6 {
    margin-top: 10px;
    overflow: hidden;
}
/* ... */

